=======
CHANGES
=======

3.6.1 (unreleased)
------------------

- ...

3.6.0 (2009-01-31)
------------------

- Rename ``zope.app.keyreference`` to ``zope.keyreference``.